# mymps

./: PROTOCOL.md  README.md  pyproject.toml
examples/: basic_inference.py  custom_model.py  forward_pass.py  streaming_llm.py  torch_ops.py
scripts/: deploy.sh  start-server.sh  tunnel.sh
src/mymps/: __init__.py  protocol.py  tensor.py
src/mymps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mymps/client/: client.py  stream.py
src/mymps/dashboard/: __main__.py  app.py
src/mymps/dashboard/templates/: _exec_result.html  _generate_result.html  _health.html  _models.html  _stats.html  index.html
src/mymps/server/: __main__.py  app.py  device.py  inference.py  models.py  ops.py  routes.py  streaming.py
