[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mymps"
version = "0.1.0"
description = "Remote MPS inference server — offload ML workloads to Apple Silicon via SSH tunnel"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "msgpack>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
server = [
    "torch>=2.1",
    "transformers>=4.36",
    "accelerate>=0.25",
    "diffusers>=0.25",
    "uvicorn[standard]>=0.24",
    "fastapi>=0.108",
    "sentencepiece>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
