[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mymps"
version = "0.2.0"
description = "MPS compute coprocessor — offload PyTorch operations to Apple Silicon via SSH tunnel"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "msgpack>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
server = [
    "torch>=2.1",
    "uvicorn[standard]>=0.24",
    "fastapi>=0.108",
]
huggingface = [
    "transformers>=4.36",
    "accelerate>=0.25",
    "sentencepiece>=0.2",
]
dashboard = [
    "flask>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
